Fix blurry text in separators

--- a/src/content/styles/separator-cards.scss
+++ b/src/content/styles/separator-cards.scss
@@ -23,6 +23,6 @@
     text-transform: uppercase;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
   }
 }
